# rust-filbase

./: .gitignore  Cargo.toml  README.md  filbase.config.example.toml
.circleci/: config.yml
docs/: benchmarking.md
scripts/: prometheus.sh  prometheus.yml
src/: api.rs  app.rs  cbor_codec.rs  client.rs  macros.rs  main.rs  server.rs  settings.rs
src/benchy/: zigzag.rs
