[package]
name = "filbase"
version = "0.1.0"
authors = ["dignifiedquire <dignifiedquire@users.noreply.github.com>"]
edition = "2018"

license = "MIT OR Apache-2.0"

[dependencies]
clap = "2.33.0"
failure = "0.1.5"
runtime = "0.3.0-alpha.4"
futures-preview = "0.3.0-alpha.16"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.9"
futures_codec = "0.2"
bytes = "0.4.12"
filecoin-proofs = { git = "https://github.com/filecoin-project/rust-proofs", branch = "safe-filproofs" }
sector-base = { git = "https://github.com/filecoin-project/rust-proofs", branch = "safe-filproofs" }
hex = "0.3.2"
config = "0.9.3"
lazy_static = "1.3.0"
rand = "0.6.5"
