[package]
name = "filbase"
version = "0.1.0"
authors = ["dignifiedquire <dignifiedquire@users.noreply.github.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
filecoin-proofs = { git = "https://github.com/filecoin-project/rust-proofs", branch = "safe-filproofs" }
sector-base = { git = "https://github.com/filecoin-project/rust-proofs", branch = "safe-filproofs" }

clap = "2.33.0"
failure = "0.1.5"
runtime = "0.3.0-alpha.4"
futures-preview = "0.3.0-alpha.16"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.9"
futures_codec = "0.2"
bytes = "0.4.12"
hex = "0.3.2"
config = "0.9.3"
lazy_static = "1.3.0"
rand = "0.4"

bellperson = {version = "0.2.0", optional = true}
chrono = {version = "0.4.6", optional = true}
paired = {version = "0.15.0", optional = true}
fil-sapling-crypto = {version = "0.1.0", optional = true}
memmap = {version = "0.7.0", optional = true}
serde_json = { version = "1.0.39", optional = true }
tempfile = { version = "3.0.8", optional = true }
storage-proofs = { git = "https://github.com/filecoin-project/rust-proofs", branch = "safe-filproofs", optional = true }
prometheus = { version = "0.6.0", optional = true }

[features]
default = []
benchy = [
  "bellperson",
  "chrono",
  "paired",
  "fil-sapling-crypto",
  "memmap",
  "serde_json",
  "tempfile",
  "prometheus",
  "prometheus/nightly",
  "prometheus/push",
  "storage-proofs",
  "storage-proofs/simd",
  "storage-proofs/asm",
  "filecoin-proofs/simd",
  "filecoin-proofs/asm",
]
process = ["benchy", "prometheus/process"]
